test/files/neg/unchecked.check
unchecked.scala:18: warning: non-variable type argument String in type pattern Iterable[String] (the underlying of Iterable[String]) is unchecked since it is eliminated by erasure
    case xs: Iterable[String] => xs.head // unchecked
             ^
unchecked.scala:22: warning: non-variable type argument Any in type pattern scala.collection.immutable.Set[Any] (the underlying of Set[Any]) is unchecked since it is eliminated by erasure
    case xs: Set[Any] => xs.head // unchecked
             ^
unchecked.scala:26: warning: non-variable type argument Any in type pattern scala.collection.immutable.Map[Any,Any] (the underlying of Map[Any,Any]) is unchecked since it is eliminated by erasure
    case xs: Map[Any, Any] => xs.head // unchecked
             ^
unchecked.scala:35: warning: non-variable type argument List[Nothing] in type pattern Test.Contra[List[Nothing]] is unchecked since it is eliminated by erasure
    case xs: Contra[List[Nothing]] => xs.head // unchecked
             ^
unchecked.scala:50: warning: non-variable type argument String in type pattern Test.Exp[String] is unchecked since it is eliminated by erasure
    case ArrayApply(x: Exp[Array[T]], _, j: Exp[String]) => x // unchecked
                                            ^
unchecked.scala:55: warning: non-variable type argument Array[T] in type pattern Test.Exp[Array[T]] is unchecked since it is eliminated by erasure
    case ArrayApply(x: Exp[Array[T]], _, _) => x // unchecked
                       ^
error: No warnings can be incurred under -Xfatal-warnings.
6 warnings found
one error found
